--- a/src/main/resources/scss/common/components/_gradient-background.scss
+++ b/src/main/resources/scss/common/components/_gradient-background.scss
@@ -6,8 +6,8 @@
 		position: fixed;
 		top: 0;
 		left: 0;
-		min-width: 100vw;
-		min-height: 100vh;
+		@include viewportWidth(min-width, 100);
+		@include viewportHeight(min-height, 100);
 		opacity: .8;
 	}
 }
